--- a/favorite.html
+++ b/favorite.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <header>
-      <a class="title" href="index.html">JUNYOUNG</a>
+      <a href="index.html">JUNYOUNG</a>
     </header>
     <nav>
       <ul>
@@ -21,9 +21,24 @@
         <li><a href="goal.html">Goal</a></li>
       </ul>
     </nav>
-    <section class="front">
-      <p>THE JOURNEY IS THE REWARD.</p>
-      <p>- Steve Jobs -</p>
+    <section class="favorite">
+      <p>
+        <img src="img/travel.jpeg" alt="travel">
+        TRAVELING
+      </p>
+        <p>
+          <img src="img/music.jpeg" alt="music">
+          MUSIC
+        </p>
+        <p>
+          <img src="img/night.jpeg" alt="night">
+          NIGHT VIEW
+        </p>
+        <p>
+          <img src="img/computer.jpeg" alt="night">
+          COMPUTER
+        </p>
+    </section>
     <footer></footer>
   </div>
 </body>
