--- a/goal.html
+++ b/goal.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <header>
-      <a class="title" href="index.html">JUNYOUNG</a>
+      <a href="index.html">JUNYOUNG</a>
     </header>
     <nav>
       <ul>
@@ -21,9 +21,17 @@
         <li><a href="goal.html">Goal</a></li>
       </ul>
     </nav>
-    <section class="front">
-      <p>THE JOURNEY IS THE REWARD.</p>
-      <p>- Steve Jobs -</p>
+    <section class="goal">
+      <p>
+        Become a Front-End Engineer 🛠
+      </p>
+      <p>
+        Build a Healthy Body 🦾
+      </p>
+      <p>
+        Have a Positive Mindset 😄
+      </p>
+    </section>
     <footer></footer>
   </div>
 </body>
