--- a/info.html
+++ b/info.html
@@ -21,9 +21,12 @@
         <li><a href="goal.html">Goal</a></li>
       </ul>
     </nav>
-    <section class="front">
-      <p>THE JOURNEY IS THE REWARD.</p>
-      <p>- Steve Jobs -</p>
+    <section class="info">
+      <img src="img/junyoung.jpeg" alt="junyoung">
+      <p id="info-name">KIM JUNYOUNG</p>
+      <p id="info-birth">1993.12.07</p>
+      <p id="info-mbti">ENFP</p>
+    </section>
     <footer></footer>
   </div>
 </body>
