--- a/goal.html
+++ b/goal.html
@@ -29,7 +29,7 @@
         Build a Healthy Body 🦾
       </p>
       <p>
-        Have a Positive Mindset 😄
+        Have a Positive Mind 😄
       </p>
     </section>
     <footer></footer>
